--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,7 @@
-/* Gold and black theme */
+body {
+  background-color: black;
+  color: gold;
+  font-family: Arial, sans-serif;
+  text-align: center;
+  padding-top: 50px;
+}
